--- a/Day 2/Lists.ipynb
+++ b/Day 2/Lists.ipynb
@@ -192,8 +192,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0f7c33f4-b672-4ba6-b52f-5b85ebe34373",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 4, 9, 16]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Basic list for range\n",
+    "squares = [x**2 for x in range(5)]\n",
+    "print(squares)  # Output: [0, 1, 4, 9, 16]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0efd2e12-277b-4874-8584-27a04d76468b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#with conditions\n",
+    "evens = [x for x in range(10) if x % 2 == 0]\n",
+    "print(evens)  # Output: [0, 2, 4, 6, 8]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "215efe92-b2e3-4ba2-abc8-06d95ff77e4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['even', 'odd', 'even', 'odd', 'even']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#With if/else\n",
+    "labels = [\"even\" if x % 2 == 0 else \"odd\" for x in range(5)]\n",
+    "print(labels)  # Output: ['even', 'odd', 'even', 'odd', 'even']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "38ea7221-1a00-4ad1-bc75-d570b1bf3e7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'avocado']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#words starting with a\n",
+    "words = [\"apple\", \"banana\", \"avocado\", \"grape\"]\n",
+    "a_words = [w for w in words if w.startswith(\"a\")]\n",
+    "print(a_words)  # Output: ['apple', 'avocado']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea91b730-9b55-485d-8324-1160cd3981e7",
    "metadata": {},
    "outputs": [],
    "source": []
