--- a/Day 3/Numpy.ipynb
+++ b/Day 3/Numpy.ipynb
@@ -287,8 +287,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "53c5b17b-4079-4a04-8bed-d786a3b6f557",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#to take 2 from this array\n",
+    "multi_d[0][0][0][0][1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d15d7da-a096-4260-af16-1fa504b20e1b",
+   "metadata": {},
+   "source": [
+    "### Making Matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "1d2a505a-27f3-48a0-9cf5-6f3525c5d48c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[1, 2],\n",
+       "        [3, 4]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mat_a = np.mat([[1,2], [3,4]])\n",
+    "mat_a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "08667f49-4da8-408b-b1a3-e293bb449d20",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 2)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mat_a.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c72adff-03af-4c4c-8922-33336b30b0a6",
+   "metadata": {},
+   "source": [
+    "#### Arrays with Arange"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "25f989a3-603b-4b94-ac13-7d2edd7c1450",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,\n",
+       "       17, 18, 19])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arange_a = np.arange(20)\n",
+    "arange_a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "7e22959f-758d-43c1-9f9e-7164bdc97d23",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 7, 14, 21, 28, 35, 42, 49, 56, 63, 70, 77, 84, 91, 98])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#multiple of 7 from 0 to 100\n",
+    "multiple_seven = np.arange(7, 100, 7)\n",
+    "multiple_seven"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "304a944b-f5cb-4e6b-9be6-f07f2cc0b37a",
    "metadata": {},
    "outputs": [],
    "source": []
