--- a/Day 4/Pandas.ipynb
+++ b/Day 4/Pandas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "fa14afbd-b13e-4d5d-895a-165c3d32925e",
    "metadata": {},
    "outputs": [],
@@ -63,12 +63,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "238b0429-3626-451d-9486-6ac1de51682d",
+   "metadata": {},
+   "source": [
+    "##### List to pandas"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b88835d-d1d7-4172-871b-1133fa0d601d",
+   "id": "305ce689-d399-4964-a8c2-42b11e1ce522",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lst = np.array([\"apple\", \"ball\"])"
+   ]
   }
  ],
  "metadata": {
