--- a/Day 4/Titanic_project_pandas_numpy.ipynb
+++ b/Day 4/Titanic_project_pandas_numpy.ipynb
@@ -715,9 +715,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f5953417-7f6b-4924-98e9-381db7e64157",
+   "metadata": {},
+   "source": [
+    "### Approaches to solve the missing values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f3f2fdf-91db-49d6-b945-c885c6a42a03",
+   "metadata": {},
+   "source": [
+    "1. Drop rows and columnn with missing value\n",
+    "2. Fill missing value with constant of missing value\n",
+    "3. Use of aggregated value ✔️\n",
+    "4. Fill the missing value with previous or next value\n",
+    "5. Algorithms ml can be used"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ac23ce8-9900-41b8-a0d3-4163c94667ff",
+   "id": "3f3d920c-40a1-4c13-a2cf-689d0d09e2e0",
    "metadata": {},
    "outputs": [],
    "source": []
