--- a/1_Mean_Median_Mode.ipynb
+++ b/1_Mean_Median_Mode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "870b4521-f612-446d-8630-76f7a9d0c1ea",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "8a8e4d48-e0e4-455e-8303-ec5fc3381dd4",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "a0c4aeec-6654-451b-aee8-4143852eda57",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,8 +178,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "ae9f8137-9697-4ec8-956b-2cff9601c620",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(29.69911764705882)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset[\"Age\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d234b707-d0c6-4534-8382-04dc4904c76d",
    "metadata": {},
    "outputs": [
     {
@@ -194,27 +215,6 @@
     }
    ],
    "source": [
-    "dataset[\"Age\"].mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "d234b707-d0c6-4534-8382-04dc4904c76d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "np.float64(29.69911764705882)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "#same thing can be done via numpy\n",
     "mn = np.mean(dataset[\"Age\"])\n",
     "mn"
@@ -222,9 +222,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "b291f4c4-34b3-47dc-bfb2-106b66b7011e",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -245,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "bcc62bed-9de1-4edc-9e82-65acfca957f3",
    "metadata": {},
    "outputs": [
@@ -269,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "f1ef8ce8-504e-40a1-82b3-e64a43c773f8",
    "metadata": {},
    "outputs": [
@@ -279,7 +281,7 @@
        "np.float64(nan)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "07e7da80-8bff-468b-97a9-f846f05b3177",
    "metadata": {},
    "outputs": [
@@ -312,7 +314,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,17 +326,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "24b18319-ae8d-4e50-a09e-d7161cbcc1e4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Sandesh Khatiwada\\AppData\\Local\\Temp\\ipykernel_13412\\824851362.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  dataset[\"Age\"].fillna(dataset[\"Age\"].mean(), inplace=True)\n"
+     ]
+    }
+   ],
    "source": [
     "dataset[\"Age\"].fillna(dataset[\"Age\"].mean(), inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "80b725b1-ba41-43ec-8b90-40c80ed1fd98",
    "metadata": {},
    "outputs": [
@@ -356,7 +372,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,8 +383,75 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "42326ea4-305c-4e32-a60e-13bc8f3fd554",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(29.69911764705882)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.median(dataset[\"Age\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "6ea755ed-19a4-4085-b320-a14b9a47268a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    male\n",
+       "Name: Sex, dtype: object"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset[\"Sex\"].mode()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "4f0212ae-cfa0-4c7f-82c9-b6c1b9e12e3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sex\n",
+       "male      577\n",
+       "female    314\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset[\"Sex\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "9a8d309a-7805-4c73-9b44-bc692dfc992b",
+   "id": "57dad35f-28d3-4e02-97e2-edcc1c5205da",
    "metadata": {},
    "outputs": [],
    "source": []
