--- a/6_RandomVariable.ipynb
+++ b/6_RandomVariable.ipynb
@@ -14,9 +14,179 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "17935e7c-be75-4f79-aa1d-fd0792cc9cea",
+   "metadata": {},
+   "source": [
+    "##### If sample space is written in a variable then it is discrete random variable\n",
+    "for example: while rolling a dice it appears {1,2,3,4,5,6,} it is sample space  \n",
+    "if represented as dice_value ={{1,2,3,4,5,6}} this is now discrete random variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "3e34a98f-2233-4cf7-9d95-13c77624154a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5fe5bf6d-681e-4583-a115-6abe857165c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7257281077396596\n",
+      "0.10594420918013292\n",
+      "0.24665374938901619\n",
+      "0.3072372328379662\n",
+      "0.22710442193313163\n",
+      "0.32181954358621123\n",
+      "0.5258255409838565\n",
+      "0.9094537103169312\n",
+      "0.7439593607021839\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,10):\n",
+    "    print(random.random())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "8c48d36f-544c-4aea-89d3-ae9ad4344b1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "random.randint(1,10) #random int from 1 to 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "6862286c-0f94-40f9-a7d6-e00751bb2148",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "65.73088666364345"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "random.uniform(1,100) #random float between 1 and 100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27276b81-f7d9-4b48-a31e-112c775777a5",
+   "metadata": {},
+   "source": [
+    "#### using numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "776f3e0f-4738-41d8-a3f0-f8fb948020df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "a10e66c4-63f2-46f9-a7a0-43c7976e2711",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6763674525816311"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.random()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "f380d1e7-90b6-45a0-9701-f20dcee1d8db",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.randint(1,19)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "121d4eba-6e30-4704-baf1-b3b8abf11987",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26.312447096026098"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.uniform(1,100)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "922a7ba1-16db-4e63-a168-e55a13289b8d",
+   "id": "523f9957-cbc5-4308-adbe-fe0d7680cf7b",
    "metadata": {},
    "outputs": [],
    "source": []
