--- a/12_Chi_Squared_Test.ipynb
+++ b/12_Chi_Squared_Test.ipynb
@@ -20,8 +20,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "811182f6-06f4-474d-bba1-56032c4de6bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_time_n =  120\n",
+    "\n",
+    "expected_value = 120/6 #120 times and 6 results\n",
+    "expected_value\n",
+    "\n",
+    "alpha = 5/100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "964d6e6b-9856-4c26-8c1a-31fe3392cb53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "observed_values = np.array([22 , 17 , 20 , 26 , 22 , 13])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "e2be4ec4-945b-4af3-ab01-b67d05841ef4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[np.float64(0.2),\n",
+       " np.float64(0.45),\n",
+       " np.float64(0.0),\n",
+       " np.float64(1.8),\n",
+       " np.float64(0.2),\n",
+       " np.float64(2.45)]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#now observerd - expected summation\n",
+    "intermediate_result = []\n",
+    "for i in range(len(observed_values)):\n",
+    "    result = ((observed_values[i] - expected_value)**2)/expected_value\n",
+    "    intermediate_result.append(result)\n",
+    "intermediate_result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "8a93aec7-ac8b-4164-9593-e1889db31f0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(5.1000000000000005)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculated_value =  np.sum(intermediate_result)\n",
+    "calculated_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "7730523d-8b2f-4de6-a4b3-bbc10ff3c5b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(94.81123693930806)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import scipy.stats as st\n",
+    "tabulated_value = st.chi2.ppf(alpha, df=(total_time_n-1))\n",
+    "tabulated_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1429573-2723-4050-9c76-76c05ec24ceb",
    "metadata": {},
    "outputs": [],
    "source": []
