--- a/12_Chi_Squared_Test.ipynb
+++ b/12_Chi_Squared_Test.ipynb
@@ -99,31 +99,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "7730523d-8b2f-4de6-a4b3-bbc10ff3c5b6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(94.81123693930806)"
+       "np.float64(1.1454762260617692)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import scipy.stats as st\n",
-    "tabulated_value = st.chi2.ppf(alpha, df=(total_time_n-1))\n",
+    "tabulated_value = st.chi2.ppf(alpha, df=(6-1)) #6 is the number of sample\n",
     "tabulated_value"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "f1429573-2723-4050-9c76-76c05ec24ceb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alternative hypothesis is accepted\n"
+     ]
+    }
+   ],
+   "source": [
+    "if calculated_value > tabulated_value:\n",
+    "    print(\"Alternative hypothesis is accepted\")\n",
+    "else:\n",
+    "    print(\"Null hypothesis is accepted\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8d94a49-631e-449f-881c-30539c52c43c",
    "metadata": {},
    "outputs": [],
    "source": []
