linear regression split

--- a/27_Linear_Regression.ipynb
+++ b/27_Linear_Regression.ipynb
@@ -129,6 +129,47 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3a21bd49-0f95-43ea-93e4-d572731c67db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = dataset[[\"cgpa\"]]\n",
+    "y = dataset[\"package\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e426628c-76d0-4019-a63a-5f73c0245a0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "e581f514-7a00-4052-af0a-1b9a5c36dbf4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# help(train_test_split)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a46fdd6-5687-413d-8341-25d897762c30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42)"
+   ]
   }
  ],
  "metadata": {
