--- a/31_Binary_Class_Classiciation_For_Multiple_Input.ipynb
+++ b/31_Binary_Class_Classiciation_For_Multiple_Input.ipynb
@@ -2,8 +2,115 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "711a92d8-f3b1-4ca2-86dd-4f48598cf599",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "296cb1eb-766f-426d-8a1b-674e156a886f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = pd.read_csv(r\"D:\\Github\\Data-Science-And-Machine-Learning-Course\\Datasets\\placement.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "10202831-3a15-423a-87fc-f969b4545d52",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cgpa</th>\n",
+       "      <th>score</th>\n",
+       "      <th>package</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6.89</td>\n",
+       "      <td>4.349952</td>\n",
+       "      <td>3.26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5.12</td>\n",
+       "      <td>6.609859</td>\n",
+       "      <td>1.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7.82</td>\n",
+       "      <td>9.401520</td>\n",
+       "      <td>3.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7.42</td>\n",
+       "      <td>1.052133</td>\n",
+       "      <td>3.67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6.94</td>\n",
+       "      <td>1.726702</td>\n",
+       "      <td>3.57</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   cgpa     score  package\n",
+       "0  6.89  4.349952     3.26\n",
+       "1  5.12  6.609859     1.98\n",
+       "2  7.82  9.401520     3.25\n",
+       "3  7.42  1.052133     3.67\n",
+       "4  6.94  1.726702     3.57"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60b5670d-9071-4ee5-8637-2b1cc9925f96",
    "metadata": {},
    "outputs": [],
    "source": []
