--- a/34_Model Evaluation Metrics.ipynb
+++ b/34_Model Evaluation Metrics.ipynb
@@ -198,56 +198,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "id": "cef61e8c-6c21-4f50-959a-3a708a26d75d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1.0, 0.0, <bound method Series.mean of 0      1.0\n",
-       "                 1      1.0\n",
-       "                 2      1.0\n",
-       "                 3      1.0\n",
-       "                 4      1.0\n",
-       "                       ...\n",
-       "                 609    1.0\n",
-       "                 610    1.0\n",
-       "                 611    1.0\n",
-       "                 612    1.0\n",
-       "                 613    0.0\n",
-       "                 Name: Credit_History, Length: 614, dtype: object>],\n",
-       "      dtype=object)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dataset[\"Credit_History\"].unique()"
+    "dataset[\"Credit_History\"] = pd.to_numeric(dataset[\"Credit_History\"], errors='coerce').fillna(0).astype('int64')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "id": "dfae7d2d-852b-4513-b30b-fc8a43dcb41e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Sandesh Khatiwada\\AppData\\Local\\Temp\\ipykernel_5768\\2647210718.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  dataset[\"Gender\"].fillna(dataset[\"Gender\"].mode()[0], inplace=True)\n",
+      "C:\\Users\\Sandesh Khatiwada\\AppData\\Local\\Temp\\ipykernel_5768\\2647210718.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  dataset[\"Self_Employed\"].fillna(dataset[\"Self_Employed\"].mode()[0], inplace=True)\n"
+     ]
+    }
+   ],
    "source": [
     "dataset[\"Gender\"].fillna(dataset[\"Gender\"].mode()[0], inplace=True)\n",
     "dataset[\"Dependents\"].fillna(dataset[\"Dependents\"].mean, inplace=True)\n",
     "dataset[\"Self_Employed\"].fillna(dataset[\"Self_Employed\"].mode()[0], inplace=True)\n",
     "dataset[\"LoanAmount\"].fillna(dataset[\"LoanAmount\"].mean, inplace=True)\n",
-    "dataset[\"Loan_Amount_Term\"].fillna(dataset[\"Loan_Amount_Term\"].mean, inplace=True)\n",
-    "# dataset[\"Credit_History\"].fillna(dataset[\"Credit_History\"].mean, inplace=True)"
+    "dataset[\"Loan_Amount_Term\"].fillna(dataset[\"Loan_Amount_Term\"].mean, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "b0b07bce-2454-4d33-865b-5f279d6aa432",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Loan_ID              0\n",
+       "Gender               0\n",
+       "Married              3\n",
+       "Dependents           0\n",
+       "Education            0\n",
+       "Self_Employed        0\n",
+       "ApplicantIncome      0\n",
+       "CoapplicantIncome    0\n",
+       "LoanAmount           0\n",
+       "Loan_Amount_Term     0\n",
+       "Credit_History       0\n",
+       "Property_Area        0\n",
+       "Loan_Status          0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.isna().sum()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0b07bce-2454-4d33-865b-5f279d6aa432",
+   "id": "3769fcbe-b01e-4b09-bbbb-999c4dec5f37",
    "metadata": {},
    "outputs": [],
    "source": []
