--- a/34_Model Evaluation Metrics.ipynb
+++ b/34_Model Evaluation Metrics.ipynb
@@ -13,6 +13,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d8e61859-5adb-4e98-af32-e33e58a0ce04",
+   "metadata": {},
+   "source": [
+    "### Loading Dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 171,
    "id": "f448359e-3557-4e7a-9c5d-f8cef6e83116",
@@ -239,6 +247,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "22d9638c-4a89-48c3-850f-00948c24bebf",
+   "metadata": {},
+   "source": [
+    "### Handling missing values and type"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 177,
    "id": "768c3abf-c7d6-46df-9c47-4fb2c4b9c87f",
@@ -456,6 +472,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "20656064-df2f-4393-8a84-a0a860fd421d",
+   "metadata": {},
+   "source": [
+    "### Label Encoding"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 185,
    "id": "62a11774-e753-4e5d-816b-1168741022c7",
@@ -619,6 +643,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e03a20a3-8aa6-4a9f-9944-7ac5eca39d41",
+   "metadata": {},
+   "source": [
+    "### Seperate data before split"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 188,
    "id": "f941944b-3a28-486c-9f00-01ab33f00f46",
@@ -636,7 +668,6 @@
     }
    ],
    "source": [
-    "#seperate data before split\n",
     "X = dataset.drop(columns=[\"Loan_Status\", \"Loan_ID\"])\n",
     "y = dataset[\"Loan_Status\"]\n",
     "X.ndim"
@@ -688,6 +719,14 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe780010-b8cc-44ae-9776-e6bce8756282",
+   "metadata": {},
+   "source": [
+    "### Training the data"
+   ]
   },
   {
    "cell_type": "code",
@@ -1457,9 +1496,66 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "c4c9ad72-f054-4c10-93b8-f495d2e1c754",
+   "metadata": {},
+   "source": [
+    "### Accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "id": "225e94a1-0278-44a7-961e-2097614a8dc4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = lr.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
+   "id": "80aeb622-883f-4e35-8488-e60d9ff0e2f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import accuracy_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "id": "243ac861-4d93-47cd-bc1e-a102ee50ea74",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.784688995215311"
+      ]
+     },
+     "execution_count": 239,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(y_test, y_pred)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe82fbe5-f78c-4fec-9251-cddd16fd5118",
+   "id": "a62bb527-3c23-4cd5-9a17-cf4e828d6ca5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "efb16700-592d-498c-a47e-d5531f3ae18c",
    "metadata": {},
    "outputs": [],
    "source": []
