confusion matrix and classification report

--- a/34_Model Evaluation Metrics.ipynb
+++ b/34_Model Evaluation Metrics.ipynb
@@ -1553,9 +1553,83 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "f546d585-6ebb-4eee-8d80-3bd291bbd2f3",
+   "metadata": {},
+   "source": [
+    "### Confusion Matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 240,
+   "id": "081836c3-0155-46de-8fa8-cf0987d486bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 27,  40],\n",
+       "       [  5, 137]])"
+      ]
+     },
+     "execution_count": 240,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "confusion_matrix(y_test, y_pred)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efb16700-592d-498c-a47e-d5531f3ae18c",
+   "id": "7c2f5994-9a6b-4847-8087-98b9fcc2b279",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac503b92-e3b5-460a-b45d-4727fc69d499",
+   "metadata": {},
+   "source": [
+    "### Classification Report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 243,
+   "id": "b50c5ff1-75f1-4175-8d15-629cc60a2950",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.84      0.40      0.55        67\n",
+      "           1       0.77      0.96      0.86       142\n",
+      "\n",
+      "    accuracy                           0.78       209\n",
+      "   macro avg       0.81      0.68      0.70       209\n",
+      "weighted avg       0.80      0.78      0.76       209\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fba2a508-b8cc-4a48-92dd-dc9c07675e2f",
    "metadata": {},
    "outputs": [],
    "source": []
