Imbalanced dataste handling

--- a/35_Imbalanced_Dataset.ipynb
+++ b/35_Imbalanced_Dataset.ipynb
@@ -103,11 +103,183 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "0ffb63a0-be80-4ae5-a309-40ff84b5bef5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Purchased\n",
+       "0    257\n",
+       "1    143\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset[\"Purchased\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8d2ee1f6-24d1-4a87-be9e-5999d8f24181",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#as dataset looks imbalance so we can do both undersampling and oversampling for these"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9e3e30fb-b0a4-40e4-8b3b-ee7a733bf638",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "User ID            0\n",
+       "Gender             0\n",
+       "Age                0\n",
+       "EstimatedSalary    0\n",
+       "Purchased          0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0ab49166-e881-433c-8978-a8217b4813a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#we change gender into label, but instead of label encoder we can also use map feature\n",
+    "dataset[\"Gender\"] = dataset[\"Gender\"].map({\"Male\":0, \"Female\":1})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "3bed4cd3-334e-4f3f-93e5-271d3b7b3c34",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>User ID</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>EstimatedSalary</th>\n",
+       "      <th>Purchased</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>15624510</td>\n",
+       "      <td>0</td>\n",
+       "      <td>19</td>\n",
+       "      <td>19000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>15810944</td>\n",
+       "      <td>0</td>\n",
+       "      <td>35</td>\n",
+       "      <td>20000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>15668575</td>\n",
+       "      <td>1</td>\n",
+       "      <td>26</td>\n",
+       "      <td>43000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    User ID  Gender  Age  EstimatedSalary  Purchased\n",
+       "0  15624510       0   19            19000          0\n",
+       "1  15810944       0   35            20000          0\n",
+       "2  15668575       1   26            43000          0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "0653f0f3-8e4e-4714-9fc4-1152aa591878",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = dataset.drop(columns=[\"User ID\", \"Purchased\"])\n",
+    "y = dataset[\"Purchased\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72e99249-d34c-4fb5-bf39-d2bf75c37fed",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "248f8016-9999-49f7-bd55-a474d1fc90de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#for oversampling as of now\n",
+    "from imblearn"
+   ]
   }
  ],
  "metadata": {
