Imbalanced dataset into oversampling

--- a/35_Imbalanced_Dataset.ipynb
+++ b/35_Imbalanced_Dataset.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "0ffb63a0-be80-4ae5-a309-40ff84b5bef5",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "8d2ee1f6-24d1-4a87-be9e-5999d8f24181",
    "metadata": {},
    "outputs": [],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "9e3e30fb-b0a4-40e4-8b3b-ee7a733bf638",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "0ab49166-e881-433c-8978-a8217b4813a0",
    "metadata": {},
    "outputs": [],
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "3bed4cd3-334e-4f3f-93e5-271d3b7b3c34",
    "metadata": {},
    "outputs": [
@@ -242,7 +242,7 @@
        "2  15668575       1   26            43000          0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "0653f0f3-8e4e-4714-9fc4-1152aa591878",
    "metadata": {},
    "outputs": [],
@@ -272,14 +272,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
+   "id": "aca4f5c5-7694-4575-9cd9-e43164b9d110",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting imbalanced-learn\n",
+      "  Using cached imbalanced_learn-0.14.0-py3-none-any.whl.metadata (8.8 kB)\n",
+      "Requirement already satisfied: numpy<3,>=1.25.2 in d:\\installations\\miniconda\\envs\\dsml\\lib\\site-packages (from imbalanced-learn) (2.0.1)\n",
+      "Requirement already satisfied: scipy<2,>=1.11.4 in d:\\installations\\miniconda\\envs\\dsml\\lib\\site-packages (from imbalanced-learn) (1.16.0)\n",
+      "Requirement already satisfied: scikit-learn<2,>=1.4.2 in d:\\installations\\miniconda\\envs\\dsml\\lib\\site-packages (from imbalanced-learn) (1.7.1)\n",
+      "Requirement already satisfied: joblib<2,>=1.2.0 in d:\\installations\\miniconda\\envs\\dsml\\lib\\site-packages (from imbalanced-learn) (1.5.1)\n",
+      "Requirement already satisfied: threadpoolctl<4,>=2.0.0 in d:\\installations\\miniconda\\envs\\dsml\\lib\\site-packages (from imbalanced-learn) (3.5.0)\n",
+      "Using cached imbalanced_learn-0.14.0-py3-none-any.whl (239 kB)\n",
+      "Installing collected packages: imbalanced-learn\n",
+      "Successfully installed imbalanced-learn-0.14.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "!{sys.executable} -m pip install imbalanced-learn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "248f8016-9999-49f7-bd55-a474d1fc90de",
    "metadata": {},
    "outputs": [],
    "source": [
     "#for oversampling as of now\n",
-    "from imblearn"
+    "from imblearn.over_sampling import RandomOverSampler\n",
+    "ro = RandomOverSampler()\n",
+    "ro_x , ro_y = ro.fit_resample(X, y)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "6ff73785-343a-4be2-bdab-1cd04141b0c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(Gender  Age  EstimatedSalary\n",
+       " 0       48   33000              6\n",
+       " 1       40   142000             6\n",
+       " 0       56   60000              5\n",
+       "         47   23000              4\n",
+       "         32   100000             4\n",
+       "                                ..\n",
+       "         30   89000              1\n",
+       "         23   63000              1\n",
+       "         30   135000             1\n",
+       "         31   18000              1\n",
+       "         24   19000              1\n",
+       " Name: count, Length: 379, dtype: int64,\n",
+       " Purchased\n",
+       " 0    257\n",
+       " 1    257\n",
+       " Name: count, dtype: int64)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ro_x.value_counts(), ro_y.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8d0b531-64fb-4559-b260-a3a7b4fd3ee2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
