decision tree training

--- a/37_Decision_Tree.ipynb
+++ b/37_Decision_Tree.ipynb
@@ -104,6 +104,53 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "7fdc6180-96a2-40be-804b-5eb9b13ef05e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = dataset.drop(columns=[\"placement\"])\n",
+    "y = dataset[\"placement\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70204ff1-4d98-486e-8172-e677d4b45266",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "adfea0f2-9a62-433a-8a9a-8b37d33e7073",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "d2758890-eb95-4b74-a731-8ab443f078c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# help(train_test_split)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60210fa6-c9fd-4c1b-af22-d0a0adc1109a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
