heart disease detection

--- a/Decision Support System/2. Cardiovascular Disease Risk Prediction/Cardiovascular_dss.ipynb
+++ b/Decision Support System/2. Cardiovascular Disease Risk Prediction/Cardiovascular_dss.ipynb
@@ -312,12 +312,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8c2289ba-87a0-4b2c-b0dc-0cd2924fe44e",
+   "metadata": {},
+   "source": [
+    "## Comparision of heart disease against different features"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18e505e6-afb0-44c2-888d-06c19e175c4d",
+   "id": "21555a62-dddf-40a6-908a-3b4aebd28e1a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "heart_against_dmi = (\n",
+    "    dataset.groupby('transaction_type')['is_suspicious']\n",
+    ".agg(['sum', 'count', 'mean'])\n",
+    ".sort_values(by='mean', ascending=False)\n",
+    ")\n",
+    "\n",
+    "print(heart_against_dmi)"
+   ]
   }
  ],
  "metadata": {
